Press P Crashes Blender After Fracture of Cube #35177

Closed
opened 2013-05-02 03:52:58 +02:00 by Atomic · 6 comments

%%%--- Operating System, Graphics card ---
Windows 7 8GB 64 bit
nVidia gtx460 1GB

- Blender version with error, and version that worked ---

Fails on 2.6.7 RC r56271

- Short description of error ---

Open the default scene and press the Space bar.
Type 'frac' in the search box and choose Fracture Object from the result list.
In the Tools panel set the count to 48 and execute the fracture.
Move mouse into 3D window and press the P-KEY.
After a short moment, Blender crashes on my setup.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- Windows 7 8GB 64 bit nVidia gtx460 1GB - Blender version with error, and version that worked --- Fails on 2.6.7 RC r56271 - Short description of error --- Open the default scene and press the Space bar. Type 'frac' in the search box and choose Fracture Object from the result list. In the Tools panel set the count to 48 and execute the fracture. Move mouse into 3D window and press the P-KEY. After a short moment, Blender crashes on my setup. - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%No crash here, SVN 56447, WIn 7 x64.

Note: For this report you have to enable the "Fracture Tools" addon first.%%%

%%%No crash here, SVN 56447, WIn 7 x64. Note: For this report you have to enable the "Fracture Tools" addon first.%%%

%%%cant redo, r56465, linux 64bit%%%

%%%cant redo, r56465, linux 64bit%%%

%%%Can redo, looking.%%%

%%%Can redo, looking.%%%

%%%Investigated the crash.

Root issue goes to the fact object fracture used to create objects with hundreds of uv maps, while blender supports only 8 actually. This was fixed in svn rev56441 by Brecht. So now you're not able to reproduce the crash with steps provided. Nice!

But, if you'll do object fracture in older blender (like in 2.66a or 2.67-RC) you still could have mesh with hundreds of UV maps. I've fixed GE crash in this case (svn rev56468), but there possible some other areas in blender will suffer the same issue, but that's just another story caused by old bug.

Thanks for the report, closing! :)%%%

%%%Investigated the crash. Root issue goes to the fact object fracture used to create objects with hundreds of uv maps, while blender supports only 8 actually. This was fixed in svn rev56441 by Brecht. So now you're not able to reproduce the crash with steps provided. Nice! But, if you'll do object fracture in older blender (like in 2.66a or 2.67-RC) you still could have mesh with hundreds of UV maps. I've fixed GE crash in this case (svn rev56468), but there possible some other areas in blender will suffer the same issue, but that's just another story caused by old bug. Thanks for the report, closing! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35177
No description provided.